fix observer and add animation

--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Emdi.Dev</title>
+  <!--Fonts & Bootstrap-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cagliostro&family=Changa+One:ital@0;1&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Saira:ital,wght@0,100..900;1,100..900&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+  <!--Stylesheet-->
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/home.css">
+  <link rel="stylesheet" href="styles/about.css">
+  <link rel="stylesheet" href="styles/skills.css">
+  <link rel="stylesheet" href="styles/projects.css">
+  <link rel="stylesheet" href="styles/contact.css">
+  <link rel="stylesheet" href="styles/animation.css">
 </head>
 <body>
   <nav>
@@ -26,6 +34,7 @@
     </ul>
   </nav>
 
+  <!--HOME SECTION-->
   <section class="home">
     <div class="content-box">
 
@@ -66,6 +75,7 @@
     </div>
   </section>
 
+  <!--ABOUT SECTION-->
   <section class="about">
     <div class="bio-container">
       <p>About Me</p>
@@ -80,9 +90,15 @@
         <div class="my-journey">
           <h3>My Journey</h3>
           <p>
-            I started my development journey almost a year ago, driven by curiosity and a love for games and problem-solving. What began as experimenting with HTML and CSS has evolved into a passion for full-stack development, user experience design, and modern web technologies. At first, I was reluctant to learn CSS, I just felt lazy whenever I tried it. That's when I realized I was more drawn to the challenge of problem-solving, tackling questions like, "How do I fix this error?" or "How do these components work?" The thrill was in solving a logic puzzle, not in calculating pixels to center a div.
-            <br><br>
-            This focus on logic and function has shaped my approach to development. I believe in writing clean, maintainable code and creating applications that not only function well but also provide exceptional user experiences. Every project is an opportunity to learn something new and push the boundaries of what's possible.
+            I started my development journey almost a year ago. Curiosity and a love for games and problem-solving pushed me forward.
+<br><br>
+            I watched tutorials for two months, focusing on front-end HTML, CSS, and JavaScript. With the help of AI, I grew faster than I expected. Self-study worked well for me.
+<br><br>
+            What began as experiments with HTML and CSS grew into an interest in full-stack development, user experience design, and modern web technologies.
+<br><br>
+            At first, I avoided CSS. I felt lazy whenever I tried it. I realized I was more interested in problem-solving. I liked tackling questions such as, "How do I fix this error?" or "How do these components work?" The thrill was in solving logic puzzles, not calculating pixels to center a div.
+<br><br>
+            This focus on logic and function shaped my approach to development. I aim to write clean, maintainable code. I build applications that work well and provide strong user experiences. Every project is a chance to learn and push further.
           </p>
         </div>
       </div>
@@ -98,6 +114,7 @@
     </div>
   </section>
 
+  <!--SKILLS SECTION-->
   <section class="skills">
     <div class="skills-bio">
       <p>Skills & Expertise</p>
@@ -224,6 +241,7 @@
     </div>
   </section>
 
+  <!--PROJECTS SECTION-->
   <section class="projects">
     <div class="all-projects">
       <div class="project-header">
@@ -250,9 +268,10 @@
     
   </section>
 
+  <!--CONTACT SECTION-->
   <section class="contact">
     <div class="container">
-      <div class="get-in-touch">
+      <div class="get-in-touch anim">
         <p id="getInTouch">Get in Touch</p>
         <p>Let's Work Together</p>
         <p>
@@ -265,13 +284,13 @@
         </div>
       </div>
       <div class="cards">
-        <div class="card">
+        <div class="card card1">
           <i class="bi bi-lightning-charge"></i>
           <p class="qq">Quick Question</p>
           <p>Have a question about my skills or experience? I'm happy to chat!</p>
           <div>Tell Me Anything</div>
         </div>
-        <div class="card">
+        <div class="card card2">
           <i class="bi bi-backpack4"></i>
           <p class="qq">Job Opportunity</p>
           <p>Have an entry-level position or project? I'd love to learn more!</p>
@@ -317,7 +336,7 @@
               <div class="card-opportunity">
                 <i class="bi bi-people"></i>
                 <p>Entry-Level Positions</p>
-                <p>Full-time opportunities</p>
+                <p>Part-time opportunities</p>
               </div>
               <div class="card-opportunity">
                 <i class="bi bi-code"></i>
@@ -366,6 +385,7 @@
       </div>
     </div>
   </section>
+  <!--FOOTER SECTION-->
   <footer>
     <div class="footer-box">
       <section>
