added more cool animation

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="greeting">&#128075; Hello, I'm Dhenmark</div>
         <div class="text-box">
           <p>
-            I'm a <span>front-end</span> developer dedicated to crafting engaging and intuitive web experiences. While I specialize in front-end technologies, I'm continuously expanding my skills with the goal of becoming a <span>full-stack</span> developer in the near future.
+           I'm a <span>front-end</span> developer focused on clean, user-friendly web experiences. I'm building my skills toward <span>full-stack</span> development.
           </p>
         </div>
         <div class="social-links">
@@ -65,11 +65,12 @@
         <div class="animation-box">
           <div class="first-box hide"><p>HELLO, EVERYONE!</p></div>
           <div class="second-box hide"><p>ITCHA BOY EMDI GEM,</p></div>
-          <div class="third-box hide"><p>AN ASPIRING</p></div>
-          <div class="last-box hide"><p>FULL-STACK DEVELOPER.</p></div>
+          <div class="third-box hide"><p>A JUNIOR</p></div>
+          <div class="last-box hide"><p>FRONT-END DEVELOPER.</p></div>
         </div>
       </div>
-
+      <div class="square1 anim"></div>
+      <div class="square2 anim"></div>
     </div>
     <div class="arrow-down">
       <i class="bi bi-arrow-down"></i>
@@ -86,7 +87,7 @@
     <div class="about-section">
       
         <div class="picture-box2">
-          <img src="imgs/first-line.png" alt="" srcset="">
+          <img src="imgs/first-line.webp" alt="" srcset="">
         </div>
         <div class="my-journey">
           <h3>My Journey</h3>
@@ -167,7 +168,7 @@
         </div> -->
 
       </div>
-      <div class="back-end">
+      <!-- <div class="back-end">
         <h4>Back End Development</h4>
 
         <div class="python">
@@ -202,7 +203,7 @@
           <div class="level level-c-sharp"></div>
         </div>
 
-      </div>
+      </div> -->
       <div class="tools-tech">
         <h4>Tools & Technologies</h4>
 
@@ -236,6 +237,14 @@
             <span>50%</span>
           </div>
           <div class="level level-bootstrap"></div>
+        </div>
+
+        <div class="figma">
+          <div class="icon">
+            <img src="imgs/figma.png" alt="">
+            <span>15%</span>
+          </div>
+          <div class="level level-figma"></div>
         </div>
 
       </div>
@@ -428,10 +437,11 @@
           Always ready to discuss opportunities, learn from experienced developers, or chat about tech!
         </p>
         <div class="email-me">
-          <p>
+          <p style="color: #fff;">
             <i style="color: #fff;" class="bi bi-envelope"></i>
             emdigemini@gmail.com
           </p>
+          <br>
           <p>
             <i style="color: #fff;" class="bi bi-geo"></i> 
             Available for internships, entry-level positions, and freelance projects
