mobile view added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@
       <h2>MD</h2>
       <p>EMDI</p>
     </div>
+    <div class="nav-mobile">
+      <ul class="navbar-mobile">
+        <div class="nav-bar">
+          <div class="line1"></div>
+          <div class="line1"></div>
+          <div class="line1"></div>
+        </div>
+        <li><a id="home_" class="active">Home</a></li>
+        <li><a id="about_">About</a></li>
+        <li><a id="skills_">Skills</a></li>
+        <li><a id="projects_">Projects</a></li>
+        <li><a id="contact_">Contact</a></li>
+      </ul>
+    </div>
     <ul class="navbar">
       <li><a id="home" class="active">Home</a></li>
       <li><a id="about">About</a></li>
@@ -39,7 +53,7 @@
   <section class="home">
     <div class="content-box">
 
-      <div class="introduction">
+      <div class="introduction anim">
         <div class="picture-box">
           <img src="imgs/me.jpg">
         </div>
@@ -92,15 +106,14 @@
         <div class="my-journey">
           <h3>My Journey</h3>
           <p>
-            I started my development journey almost a year ago. Curiosity and a love for games and problem-solving pushed me forward.
+            I started coding a year ago. Curiosity, games, and problem-solving pushed me forward.
+            I learned HTML, CSS, and JavaScript through tutorials for two months. After that, I taught myself and used AI to speed up my progress.
 <br><br>
-            I watched tutorials for two months, focusing on front-end HTML, CSS, and JavaScript. With the help of AI, I grew faster than I expected. Self-study worked well for me.
+            Simple HTML and CSS experiments grew into an interest in full-stack development, user experience, and modern web technologies.
 <br><br>
-            What began as experiments with HTML and CSS grew into an interest in full-stack development, user experience design, and modern web technologies.
+            I used to avoid CSS because I felt lazy to learn and understand it but along the way, I realized what I really enjoy is the problem-solving such a fixing errors, figuring out how things work, and treating it like one big logic puzzle.
 <br><br>
-            At first, I avoided CSS. I felt lazy whenever I tried it. I realized I was more interested in problem-solving. I liked tackling questions such as, "How do I fix this error?" or "How do these components work?" The thrill was in solving logic puzzles, not calculating pixels to center a div.
-<br><br>
-            This focus on logic and function shaped my approach to development. I aim to write clean, maintainable code. I build applications that work well and provide strong user experiences. Every project is a chance to learn and push further.
+            Now I focus on writing clean, maintainable code. I build applications that work well and give users a smooth experience.
           </p>
         </div>
       </div>
@@ -402,7 +415,6 @@
         <div class="nav-line">
           <p><span>MD</span> EMDI</p>
           <p>
-            Passionate about creating innovative web solutions and learning new technologies. 
             Currently seeking opportunities to grow as a developer and contribute to meaningful projects.
           </p>
         </div>
