--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cagliostro&family=Changa+One:ital@0;1&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Saira:ital,wght@0,100..900;1,100..900&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" href="imgs/icons8-resume-website-48.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Arapey:ital@0;1&family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Cagliostro&family=Changa+One:ital@0;1&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Saira:ital,wght@0,100..900;1,100..900&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <!--Stylesheet-->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="styles/home.css">
@@ -388,17 +389,17 @@
           <div class="input-box">
             <div class="input-name">
               <label for="full-name">Full Name *</label>
-              <input type="text" class="name" id="full-name" placeholder="Your name" required>
+              <input type="text" class="name" id="full-name" placeholder="Your Name" required>
             </div>
             <div class="input-email">
               <label for="email">Email Address *</label>
-              <input type="email" class="email" id="email" placeholder="your.email@example.com" required>
+              <input type="email" class="email" id="email" placeholder="Email Address" required>
             </div>
             <div class="subject-box">
               <label for="subject">Subject *</label>
-              <input type="text" class="subject" id="subject" placeholder="Enter a topic or title" required>
+              <input type="text" class="subject" id="subject" placeholder="Subject" required>
             </div>
-            <textarea class="message" id="message" placeholder="Leave your message..." required></textarea>
+            <textarea class="message" id="message" placeholder="Leave a message" required></textarea>
             <button class="send-btn">
               <i class="bi bi-send"></i>
               Send Message
@@ -446,7 +447,7 @@
           Let's Connect
         </div>
         <p>
-          Always ready to discuss opportunities, learn from experienced developers, or chat about tech!
+          Always ready to discuss opportunities, learn from experienced developers or chat about tech!
         </p>
         <div class="email-me">
           <p style="color: #fff;">
@@ -456,7 +457,7 @@
           <br>
           <p>
             <i style="color: #fff;" class="bi bi-geo"></i> 
-            Available for internships, entry-level positions, and freelance projects
+            Available for internships, entry-level positions and freelance projects
           </p>
         </div>
       </section>
