added social links

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <a href="https://www.instagram.com/emdi.gem/" target="_blank">
             <img src="imgs/instagram-line.svg" alt="">
           </a>
-          <a href="mailto:yogotjix@gmail.com" target="_blank">
+          <a href="mailto:emdigemini@gmail.com" target="_blank">
             <img src="imgs/mail-line.svg" alt="">
           </a>
         </div>
@@ -424,9 +424,9 @@
           <p>Pililla, Rizal</p>
         </div>
         <div class="acc-links">
-          <i class="bi bi-github"></i>  
-          <i class="bi bi-instagram"></i>
-          <i class="bi bi-envelope"></i>
+          <a href="https://github.com/emdigemini" target="_blank"><i class="bi bi-github"></i>  </a>
+          <a href="https://www.instagram.com/emdi.gem/"><i class="bi bi-instagram"></i></a>
+          <a href="mailto:emdigemini@gmail.com"><i class="bi bi-envelope"></i></a>
         </div>
       </section>
       <section class="navigation">
