--- a/index.html
+++ b/index.html
@@ -299,8 +299,8 @@
         <p id="getInTouch">Get in Touch</p>
         <p>Let's Work Together</p>
         <p>
-          As a passionate junior developer, I'm eager to learn, grow and 
-          contribute to exciting projects while building meaningful professional relationships.
+          As a passionate junior developer, I'm eager to learn, grow, and contribute to exciting projects
+          and I'm happy to <strong><i><u>work for free</u></i></strong> on small ones to gain experience and build valuable professional connections.
         </p>
         <div class="touch-by-touch">
           <p>Actively seeking for opportunities</p>
@@ -416,7 +416,8 @@
         <div class="nav-line">
           <p><span>MD</span> EMDI</p>
           <p>
-            Currently seeking opportunities to grow as a developer and contribute to meaningful projects.
+            Currently seeking opportunities to grow as a developer and contribute to meaningful projects. 
+            I'd be happy to work for free on small projects.
           </p>
         </div>
         <div class="my-location">
