--- a/index.html
+++ b/index.html
@@ -160,26 +160,18 @@
         <div class="javascript">
           <div class="icon">
             <i class="bi bi-javascript"></i>
-            <span>45%</span>
+            <span>55%</span>
           </div>
           <div class="level level-js"></div>
         </div>
 
-        <!-- <div class="react">
+        <div class="react">
           <div class="icon">
             <img src="imgs/icons8-react-50.png" alt="">
-            0%
+            30%
           </div>
           <div class="level level-react"></div>
         </div>
-
-        <div class="jsx">
-          <div class="icon">
-            <i class="bi bi-filetype-jsx"></i>
-            <span>0%</span>
-          </div>
-          <div class="level level-jsx"></div>
-        </div> -->
 
       </div>
       <!-- <div class="back-end">
