showcase of my current project

--- a/index.html
+++ b/index.html
@@ -260,6 +260,13 @@
   <!--PROJECTS SECTION-->
   <section class="projects">
     <div class="all-projects">
+      <div class="current-projects">
+        <h2>Currently Working on This Project</h2>
+        <div class="project-vid">
+          <video src="projects/video/takasgarage.mp4" autoplay muted loop></video>
+        </div>
+
+      </div>
       <div class="project-header">
         <h2>Featured Projects</h2>
         <p>
