update my portfolio picture

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
             <img src="imgs/mail-line.svg" alt="">
           </a>
         </div>
+        <div class="contactme-box">
+          <div class="contactme">CONTACT ME</div>
+        </div>
       </div>
       <div class="animation-introduction">
         <div class="animation-box">
@@ -260,13 +263,6 @@
   <!--PROJECTS SECTION-->
   <section class="projects">
     <div class="all-projects">
-      <div class="current-projects">
-        <h2>Currently Working on This Project</h2>
-        <div class="project-vid">
-          <video src="projects/video/takasgarage.mp4" autoplay muted loop></video>
-        </div>
-
-      </div>
       <div class="project-header">
         <h2>Featured Projects</h2>
         <p>
@@ -334,7 +330,7 @@
             <i class="bi bi-telephone"></i>
             <div class="my-info">
               <p style="font-weight: 550; color: #fff;">Phone</p>
-              <p>+63 912 345 6789</p>
+              <p>+63 9935 829 341</p>
               <p>Available for calls and messages</p>
             </div>
           </div>
