update the projects and added carousel animation for each featured projects

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </a>
         </div>
         <div class="contactme-box">
-          <div class="contactme">CONTACT ME</div>
+          <div class="contactme">HIRE ME</div>
         </div>
       </div>
       <div class="animation-introduction">
@@ -123,11 +123,11 @@
       </div>
     <div class="my-career">
       <div class="projects-completed">
-      <div class="count">0</div>
+      <div class="count-projects">0</div>
         <p>Projects Completed</p>
       </div>
       <div class="years-experience">
-        <div class="count">3</div>
+        <div class="count-experience">0</div>
         <p>Months Experience</p>
       </div>
     </div>
