add infinite image carousel animation for projects

--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
         <div class="animation-box">
           <div class="first-box hide"><p>HELLO, EVERYONE!</p></div>
           <div class="second-box hide"><p>ITCHA BOY EMDI GEM,</p></div>
-          <div class="third-box hide"><p>A JUNIOR</p></div>
-          <div class="last-box hide"><p>FRONT-END DEVELOPER.</p></div>
+          <div class="third-box hide"><p>A FRONT-END DEVELOPER.</p></div>
         </div>
       </div>
       <div class="square1 anim"></div>
@@ -270,9 +269,12 @@
         </p>
       </div>
       <div class="my-project">
-
-      <!--FEATURED PROJECTS HERE-->        
-
+        <div class="project-group">
+          <!--FEATURED PROJECTS HERE-->        
+        </div>
+        <div aria-hidden="true" class="project-group">
+          <!--FEATURED PROJECTS HERE-->        
+        </div>
       </div> 
     </div>
 
