add SCSS skill section and enhance project display with animations

--- a/index.html
+++ b/index.html
@@ -159,6 +159,14 @@
           <div class="level level-css"></div>
         </div>
 
+        <div class="scss">
+          <div class="icon">
+            <i class="bi bi-filetype-scss"></i>
+            <span>80%</span>
+          </div>
+          <div class="level level-css"></div>
+        </div>
+
         <div class="javascript">
           <div class="icon">
             <i class="bi bi-javascript"></i>
@@ -268,7 +276,7 @@
           Here are some of the projects I've worked on recently. Each one represents a unique challenge and learning opportunity for me.
         </p>
       </div>
-      <div class="my-project">
+      <div class="my-project">  
         <div class="project-group">
           <!--FEATURED PROJECTS HERE-->        
         </div>
@@ -280,10 +288,17 @@
 
     <div class="other-projects-container">
       <h2>Other Projects</h2>
-      <div class="my-other-projects">
+      <div class="projects-demo">
+        <div class="my-other-projects">
 
-      <!--OTHER PROJECTS HERE-->        
+        <!--OTHER PROJECTS HERE-->        
 
+        </div>
+        <div class="my-other-projects">
+
+        <!--OTHER PROJECTS HERE-->        
+
+        </div>
       </div>
     </div>
     
@@ -304,20 +319,7 @@
           <p>Quick to respond</p>
         </div>
       </div>
-      <div class="cards">
-        <div class="card card1">
-          <i class="bi bi-lightning-charge"></i>
-          <p class="qq">Quick Question</p>
-          <p>Have a question about my skills or experience? I'm happy to chat!</p>
-          <div>Tell Me Anything</div>
-        </div>
-        <div class="card card2">
-          <i class="bi bi-backpack4"></i>
-          <p class="qq">Job Opportunity</p>
-          <p>Have an entry-level position or project? I'd love to learn more!</p>
-          <div>Tell Me More</div>
-        </div>
-      </div>
+      
       <div class="contact-box">
         <div class="contact-info">
           <div class="contact-card">
