refactor: update SCSS skill level and clean up unused CSS rules

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <i class="bi bi-filetype-scss"></i>
             <span>80%</span>
           </div>
-          <div class="level level-css"></div>
+          <div class="level level-scss"></div>
         </div>
 
         <div class="javascript">
